Adicionando recursos Java 17 e Spring Boot 3